--- a/server/package.json
+++ b/server/package.json
@@ -7,18 +7,21 @@
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.12",
+    "@types/simple-oauth2": "^4.1.1",
     "nodemon": "^2.0.15",
     "ts-node": "10.4.0",
     "typescript": "^4.5.3"
   },
   "dependencies": {
     "apollo-server-express": "^3.5.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "^16.1.0",
     "jsonwebtoken": "^8.5.1",
     "my": "^0.3.3",
     "mysql": "^2.14.1",
     "reflect-metadata": "^0.1.10",
+    "simple-oauth2": "^4.2.0",
     "type-graphql": "^1.1.1",
     "typeorm": "0.2.41"
   },
