--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,10 @@
     "typescript": "^4.5.3"
   },
   "dependencies": {
-    "apollo-server-express": "^3.5.0",
+    "apollo-server-express": "^2.25",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "graphql": "^16.1.0",
+    "graphql": "15.3.0",
     "jsonwebtoken": "^8.5.1",
     "my": "^0.3.3",
     "mysql": "^2.14.1",
