--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^4",
     "graphql": "^16.1.0",
     "jwt-decode": "^3.1.2",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.2.0",
