--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.5.6",
@@ -14,6 +15,8 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.25",
+    "axios": "^0.24.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "15.3.0",
