--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "apollo-server-express": "^2.25",
     "axios": "^0.24.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "15.3.0",
