--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^3.1.2",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
