🥗 get next meal !

--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "graphql": "15.3.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "my": "^0.3.3",
     "mysql": "^2.14.1",
     "reflect-metadata": "^0.1.10",
@@ -32,6 +33,7 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "nodemon ./dist/index.js",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "seed": "node ./dist/utils/seed/seed.js"
   }
 }
